# webgpu-demo

./: CMakeLists.txt
assets/shaders/: triangle.wgsl
src/: application.cpp  application.h  buffer.cpp  buffer.h  graphicsContext.cpp  graphicsContext.h  graphicsDevice.cpp  graphicsDevice.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  utility.cpp  utility.h  window.cpp  window.h
